--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy-client": "npm run build && ./node_modules/.bin/gh-pages -d dist",
-    "test": "node --test --experimental-specifier-resolution=node test/**/*.test.js"
+    "test": "node --test --experimental-specifier-resolution=node"
   },
   "author": "",
   "license": "ISC",
