--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,3 +38,22 @@ jobs:
         run: npm ci
       - name: Run server tests
         run: npm test
+  client-tests:
+    runs-on: ubuntu-latest
+    needs: lint
+    defaults:
+      run:
+        working-directory: client
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: client/package-lock.json
+      - name: Install dependencies
+        run: npm ci
+      - name: Run client tests
+        run: npm test
